--- a/index.html
+++ b/index.html
@@ -1,7 +1,149 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="EN">
+  <head>
+      <title>Getting to know Philip Murphy</title>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+      <link rel="icon" type="image/x-icon" href="./resources/images/favicon.ico">
+      <link rel="shortcut icon" type="image/x-icon" href="./resources/images/favicon.ico">
+
+      <link rel="stylesheet" type="text/css" href="./resources/styles/main.css">
+      <link rel="stylesheet" href="./vendors/font-awesome/css/font-awesome.min.css">
+
+      <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+      <!-- Optional theme -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+  </head>
+  <body class="bg" data-spy="scroll" data-target="#myNavbar" data-offset=50>
+    <div id="myNavbar" class="container-fluid">
+      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <a href="#" class="navbar-brand">My Portfolio</a>
+          </div>
+          <div class="navbar-collapse navbar-right">
+            <ul class="nav navbar-nav">
+              <li><a href="#about">About</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+
+    <header>
+      <div class="container text-center">
+        <div class="col-lg-12">
+          <h1>Philip Murphy</h1>
+        </div>
+      </div>
+    </header>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+    <main>
+      <!-- About me section -->
+      <div class="container">
+        <div class="card container" id="about">
+          <h2>About</h2>
+          <p>
+            Some text about me
+          </p>
+        </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+        <!-- My skills section -->
+        <div class="card container" id="skills">
+          <h2>Skills</h2>
+          <p>Some words about my skills</p>
+        </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+        <!-- How to contact me section -->
+        <div class="row col-lg-12 text-center container" id="contact">
+          <h2>Contact Information</h2>
+          <p>
+            You can connect with me through varias sources:
+          </p>
+          <ul class="list-inline">
+            <li><a href="https://github.com/phester571" target="_blank"><i class="fa fa-3x fa-github-square"></i></a></li>
+            <li><a href="https://www.facebook.com/phil.murphy.98" target="_blank"><i class="fa fa-3x fa-facebook-square"></i></a></li>
+            <li><a href="https://twitter.com/phester571" target="_blank"><i class="fa fa-3x fa-twitter-square"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/philip-murphy-a7b372110" target="_blank"><i class="fa fa-3x fa-linkedin-square"></i></a></li>
+            <li><a href="https://www.freecodecamp.com/phester571" target="_blank"><i class="fa fa-3x fa-fire"></i></a></li>
+          </ul>
+        </div>
+
+      </div>
+    </main>
+
+    <footer>
+      <div class="col-sm12 text-right">
+        <p>
+          &copy 2016 - Philip Murphy
+        </p>
+      </div>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  </body>
 </html>
