--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="row col-lg-12 text-center container" id="contact">
           <h2>Contact Information</h2>
           <p>
-            You can connect with me through varias sources:
+            You can connect with me through various sources:
           </p>
           <ul class="list-inline">
             <li><a href="https://github.com/phester571" target="_blank"><i class="fa fa-3x fa-github-square"></i></a></li>
