Added titles to social media icons

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
             You can connect with me through various sources:
           </p>
           <ul class="list-inline">
-            <li><a href="https://github.com/phester571" target="_blank"><i class="fa fa-3x fa-github-square"></i></a></li>
-            <li><a href="https://www.facebook.com/phil.murphy.98" target="_blank"><i class="fa fa-3x fa-facebook-square"></i></a></li>
-            <li><a href="https://twitter.com/phester571" target="_blank"><i class="fa fa-3x fa-twitter-square"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/philip-murphy-a7b372110" target="_blank"><i class="fa fa-3x fa-linkedin-square"></i></a></li>
-            <li><a href="https://www.freecodecamp.com/phester571" target="_blank"><i class="fa fa-3x fa-fire"></i></a></li>
+            <li><a href="https://github.com/phester571" target="_blank"><i class="fa fa-3x fa-github-square" title="GitHub"></i></a></li>
+            <li><a href="https://www.facebook.com/phil.murphy.98" target="_blank"><i class="fa fa-3x fa-facebook-square" title="Facebook"></i></a></li>
+            <li><a href="https://twitter.com/phester571" target="_blank"><i class="fa fa-3x fa-twitter-square" title="Twitter"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/philip-murphy-a7b372110" target="_blank"><i class="fa fa-3x fa-linkedin-square" title="Linked In"></i></a></li>
+            <li><a href="https://www.freecodecamp.com/phester571" target="_blank"><i class="fa fa-3x fa-fire" title="Free Code Camp"></i></a></li>
           </ul>
         </div>
 
@@ -137,7 +137,7 @@
     <footer>
       <div class="col-sm12 text-right">
         <p>
-          &copy 2016 - Philip Murphy
+          &copy; 2016 Philip Murphy
         </p>
       </div>
     </footer>
