--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <div class="col-lg-12">
           <h1>Philip Murphy</h1>
         </div>
+        <div id="headerQuote">
+            <h3>Once in a while you get shown the light in the strangest of places if you look at it right. <span>- The Grateful Dead</span></h3>
+        </div>
       </div>
     </header>
 
@@ -60,12 +63,28 @@
         <!-- My portfolio section -->
         <div class="card container" id="portfolio">
           <h2>Portfolio</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in suscipit velit, in venenatis elit. In et nibh magna. Proin vel nisl ornare, finibus justo at, consequat elit. In tortor sem, iaculis at ipsum id, pulvinar iaculis dui. Curabitur molestie velit lacus, eu ullamcorper lectus gravida eu. Cras scelerisque dui mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus non consectetur orci. Mauris quis nibh semper, elementum lacus eget, fringilla ex. Suspendisse ac mi quis felis condimentum euismod.</p>
-          <p>Ut sed arcu sit amet justo scelerisque cursus. Morbi porta nulla sit amet nibh accumsan aliquam. Aenean porttitor risus sed arcu ornare, lacinia efficitur odio tincidunt. Phasellus sagittis nibh vel euismod rutrum. Duis scelerisque ultrices ipsum, eu finibus ante consequat vitae. Praesent porta feugiat orci, sed viverra arcu posuere sit amet. Praesent dapibus auctor odio eu vulputate.</p>
-          <p>Nulla tempus iaculis diam sed iaculis. Praesent elit nulla, sagittis vitae fringilla id, fermentum non sem. Integer mattis diam magna, ac porttitor lorem feugiat eu. Aliquam ut feugiat ligula. Aenean placerat efficitur nisl id pretium. Nam eu cursus felis. In id volutpat nunc. Morbi mattis justo at lacinia commodo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque a rhoncus quam, at ultrices purus. Proin in magna in mi rutrum auctor ut id leo. Aliquam accumsan nec odio at hendrerit. Nam semper erat quis vestibulum interdum.</p>
+          <div id="thumbnails" class="img-size container">
+              <div class="row thumbs">
+                  <div class="col-md-6 thumb">
+                      <a href="http://codepen.io/phester571/full/LZYzXP/" target="_blank">
+                          <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSfl61eK2mkG7EE61oqnRhOUv7QEieLBas-qeyyri9i2OYnXddr" class="img-thumbnail" alt="Tribute Page">
+                      </a>
+                  </div>
+                  <div class="col-md-6 thumb">
+                        <img src="./resources/images/coming_soon.jpg" class="img-thumbnail" alt="Coming Soon">
+                  </div>
+              </div>
+              <div class="row thumbs">
+                  <div class="col-md-6 thumb">
+                      <p class="textCenterBold">Tribute Page</p>
+                  </div>
+                  <div class="col-md-6 thumb">
+                      <p class="textCenterBold">Coming Soon<sup>1</sup></p>
+                  </div>
+              </div>
+          </div>
         </div>
-<br>
-<br>
+
         <!-- How to contact me section -->
         <div class="row col-lg-12 text-center container" id="contact">
           <h2>Contact Information</h2>
@@ -82,6 +101,7 @@
         </div>
 
       </div>
+    <div id="disclaimor">1 - "Coming Soon" image <a href="http://www.freepik.com">designed by starline / Freepik</a>.</span>
     </main>
 
     <footer>
