Add thumbnail to random quote project

--- a/index.html
+++ b/index.html
@@ -71,12 +71,20 @@
                       </a>
                   </div>
                   <div class="col-md-6 thumb">
+                      <a href="http://codepen.io/phester571/full/BpBdQN/" target="_blank">
+                          <img src="./resources/images/chatBubble.svg" class="img-thumbnail" alt="Random Quote Machine">
+                      </a>
+                  </div>
+                  <div class="col-md-6 thumb">
                         <img src="./resources/images/coming_soon.jpg" class="img-thumbnail" alt="Coming Soon">
                   </div>
               </div>
               <div class="row thumbs">
                   <div class="col-md-6 thumb">
                       <p class="textCenterBold">Tribute Page</p>
+                  </div>
+                  <div class="col-md-6 thumb">
+                      <p class="textCenterBold">Random Quote Generator</p>
                   </div>
                   <div class="col-md-6 thumb">
                       <p class="textCenterBold">Coming Soon<sup>1</sup></p>
