--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             <li><a href="https://twitter.com/phester571" target="_blank"><i class="fa fa-3x fa-twitter-square" title="Twitter"></i></a></li>
             <li><a href="https://www.linkedin.com/in/philip-murphy-a7b372110" target="_blank"><i class="fa fa-3x fa-linkedin-square" title="LinkedIn"></i></a></li>
             <li><a href="https://www.freecodecamp.com/phester571" target="_blank"><i class="fa fa-3x fa-fire" title="Free Code Camp"></i></a></li>
+            <li><a href="mailto:phil@motown.me" target"_blank"><i class="fa fa-3x fa-envelope" title="Mail"></i></a></li>
           </ul>
         </div>
 
