Fix some HTML errors

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <!--<body class="bg" data-spy="scroll" data-target="#myNavbar" data-offset=50>-->
   <body class="bg">
 
-      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <nav class="navbar navbar-default navbar-fixed-top">
           <div class="container" id="myNavbar">
               <div class="navbar-header">
-                  <a class="navbar-brand" href="#"><img src=".\resources\images\favicon.ico" alt="Shamrock Logo" id="brandImage"><span>Philip</span></a>
+                  <a class="navbar-brand" href="#"><img src="./resources/images/favicon.ico" alt="Shamrock Logo" id="brandImage"><span>Philip</span></a>
               </div>
 
               <div class="collapse navbar-collapse navbar-right">
@@ -105,12 +105,12 @@
             <li><a href="https://twitter.com/phester571" target="_blank"><i class="fa fa-3x fa-twitter-square" title="Twitter"></i></a></li>
             <li><a href="https://www.linkedin.com/in/philip-murphy-a7b372110" target="_blank"><i class="fa fa-3x fa-linkedin-square" title="LinkedIn"></i></a></li>
             <li><a href="https://www.freecodecamp.com/phester571" target="_blank"><i class="fa fa-3x fa-fire" title="Free Code Camp"></i></a></li>
-            <li><a href="mailto:phil@motown.me" target"_blank"><i class="fa fa-3x fa-envelope" title="Mail"></i></a></li>
+            <li><a href="mailto:phil@motown.me" target="_blank"><i class="fa fa-3x fa-envelope" title="Mail"></i></a></li>
           </ul>
         </div>
 
       </div>
-    <div id="disclaimor">1 - "Coming Soon" image <a href="http://www.freepik.com">designed by starline / Freepik</a>.</span>
+    <div id="disclaimor">1 - "Coming Soon" image <a href="http://www.freepik.com">designed by starline / Freepik</a>.</div>
     </main>
 
     <footer>
